Changes barcode from PHP-based to JS-based

--- a/plugins/barcode.example.html
+++ b/plugins/barcode.example.html
@@ -1,12 +1,14 @@
 <html>
   <head>
     <title>Test</title>
-    <script defer src="barcode.js"></script>
-  </head>
+    <script src="barcode.js"></script>
+    <link rel="stylesheet" href="./barcode.css" />
   <body>
 
-    <form>
-      <input class="barcode-in"></input>
+    <img class="barcode-icon" />
+
+    <form onsubmit="alert('Doh!');return false">
+      <input/>
     </form>
 
   </body>
